objects/LeaveON__c.object
<CustomObject>
    <fields>
        <fullName>NoofDays__c</fullName>
        <label>NoofDays</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Regected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LeaveON</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Balaji Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeaveON</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>